Fix font on iPhone

--- a/index.css
+++ b/index.css
@@ -99,4 +99,11 @@ footer {
   font-size: 6em;
 }
 
-
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 667px)
+and (orientation : portrait) {
+  .header-font {
+    font-size: 4.5em;
+  }
+}
